# MimirFW

./: .dockerignore  .gitattributes  .gitignore  README.md
Docker/: .env  Dockerfile  README.md  build.sh  docker-compose.override.cpu.yml  docker-compose.override.cuda.yml  docker-compose.yml  rebuild.sh  run.sh
Docker/LLMCore/: Dockerfile  Dockerfile.cpu  Dockerfile.mps  dev-requirements.txt  llmcore.env  requirements-cpu.txt  requirements-cuda.txt  requirements-nvidia.txt  requirements.txt
Docker/Redis/: Dockerfile
Docker/Weaviate/: Dockerfile  weaviate.env
Docker/scripts/: device-check.sh
Docker/vLLM-Emb/: Dockerfile  README.md  entrypoint_custom.sh
Docker/vLLM-Emb/emb/: emb.py  requirements.txt
LLMCore/: .dockerignore  README.md  demo.py  test_data.txt
LLMCore/customs/: langchain_embeddings.py
LLMCore/managers/: inference_framework.py  model_loader.py
LLMCore/managers/utils/: model_selecter.py
LLMCore/pretrained/: README.md  downloader.py
LLMCore/test/: demo.py  redis-demo.py  test_data.txt  vllm-emb.py
LLMCore/utils/: device_checker.py  model_selecter.py
api/: .env.example  .ruff.toml  README.md  app.py  app_factory.py  mypy.ini  pyproject.toml  pytest.ini
api/configs/: __init__.py  app_config.py
api/configs/deploy/: __init__.py
api/configs/extra/: __init__.py
api/configs/feature/: __init__.py
api/configs/middleware/: __init__.py
api/configs/middleware/cache/: redis_config.py
api/configs/middleware/storage/: aliyun_oss_storage_config.py  amazon_s3_storage_config.py  opendal_storage_config.py
api/configs/middleware/vdb/: milvus_config.py  weaviate_config.py
api/configs/observability/: __init__.py
api/configs/packaging/: __init__.py  pyproject.py
api/extensions/: ext_celery.py  ext_database.py  ext_logging.py  ext_redis.py
api/libs/: file_utils.py
api/tests/: __init__.py  conftest.py
api/tests/unit_tests/: test_app_factory.py  test_configs.py
config/: __init__.py
dev/: README.md  mypy-check  reformat  update-uv
dev/pytest/: pytest_unit_tests.sh
docker/: README.md
scripts/install_env/: README.md  install.sh  install_docker.sh  install_helm.sh  install_k8s.sh
web/: README.md
