[project]
name = "mimirfw-api"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
description = "MimirFW API Backend - 对话类游戏构建框架"
authors = [{name = "MimirFW Team"}]

dependencies = [
    # Core Web Framework
    "flask~=3.1.2",
    "flask-compress~=1.17",
    "flask-cors~=6.0.0",
    "flask-login~=0.6.3",
    "flask-migrate~=4.0.7",
    "flask-orjson~=2.0.0",
    "flask-sqlalchemy~=3.1.1",
    "flask-restx>=1.3.0",
    "gunicorn~=23.0.0",
    "gevent~=24.11.1",
    
    # Database
    "sqlalchemy~=2.0.29",
    "psycopg2-binary~=2.9.6",
    "psycogreen~=1.0.2",
    "redis[hiredis]~=6.1.0",
    
    # Task Queue
    "celery~=5.5.2",
    
    # AI/LLM Core
    "openai~=1.61.0",
    "tiktoken~=0.9.0",
    "transformers~=4.53.0",
    
    # HTTP Client & Auth
    "httpx[socks]~=0.27.0",
    "authlib==1.3.1",
    "pyjwt~=2.8.0",
    
    # Data Processing
    "pydantic~=2.11.4",
    "pydantic-extra-types~=2.10.3",
    "pydantic-settings~=2.9.1",
    "numpy~=1.26.4",
    "pandas[excel,output-formatting,performance]~=2.2.2",
    "pyyaml~=6.0.1",
    "python-dotenv==1.0.1",
    "json-repair>=0.41.1",
    
    # Crypto & Security
    "pycryptodome==3.19.1",
    "cachetools~=5.3.0",
    
    # Utilities
    "beautifulsoup4==4.12.2",
    "chardet~=5.1.0",
    "markdown~=3.5.1",
    "yarl~=1.18.3",
    "sseclient-py>=1.8.0",
    "httpx-sse>=0.4.0",
]

[tool.setuptools]
packages = []

[tool.uv]
default-groups = ["storage", "tools", "vdb"]
package = false

[dependency-groups]

############################################################
# [ Dev ] dependency group
# 开发和测试必需的依赖
############################################################
dev = [
    "coverage~=7.2.4",
    "faker~=32.1.0",
    "mypy~=1.17.1",
    "ruff~=0.12.3",
    "dotenv-linter~=0.5.0",
    "pytest~=8.3.2",
    "pytest-benchmark~=4.0.0",
    "pytest-cov~=4.1.0",
    "pytest-env~=1.1.3",
    "pytest-mock~=3.14.0",
    "testcontainers~=4.10.0",
    "types-flask-cors~=5.0.0",
    "types-flask-migrate~=4.1.0",
    "types-pyyaml~=6.0.12",
    "types-requests~=2.32.0",
    "types-redis>=4.6.0.20241004",
    "celery-types>=0.23.0",
    "types-gevent>=25.4.0.20250915",
    "types-greenlet>=3.2.0.20250915",
    "types-psutil>=7.0.0.20250822",
    "types-colorama>=0.4.15.20250801",
    "types-pygments>=2.19.0.20250809",
    "types-deprecated>=1.2.15.20250304",
    "types-docutils>=0.22.0.20250914",
]

############################################################
# [ Storage ] dependency group
# 存储客户端
############################################################
storage = [
    "azure-storage-blob==12.13.0",
    "boto3==1.35.99",
    "google-cloud-storage==2.16.0",
]

############################################################
# [ Tools ] dependency group
# 工具相关依赖
############################################################
tools = [
    "jieba==0.42.1",  # 中文分词，游戏文本处理
]

############################################################
# [ VDB ] dependency group
# 向量数据库客户端（游戏知识库必需）
############################################################
vdb = [
    "weaviate-client~=3.24.0",  # 默认向量数据库
    "chromadb==0.5.20",         # 可选向量数据库
    "qdrant-client==1.9.0",     # 可选向量数据库
    "pymilvus~=2.5.0",          # 可选向量数据库
]

############################################################
# [ Monitoring ] dependency group（后续开发）
# 监控追踪依赖
############################################################
monitoring = [
    "opentelemetry-api==1.27.0",
    "opentelemetry-sdk==1.27.0",
    "opentelemetry-instrumentation==0.48b0",
    "opentelemetry-instrumentation-flask==0.48b0",
    "opentelemetry-instrumentation-celery==0.48b0",
    "opentelemetry-instrumentation-redis==0.48b0",
    "opentelemetry-instrumentation-sqlalchemy==0.48b0",
    "opentelemetry-exporter-otlp==1.27.0",
    "sentry-sdk[flask]~=2.28.0",
]

############################################################
# [ Enterprise ] dependency group（后续开发）
# 企业级功能依赖
############################################################
enterprise = [
    "langfuse~=2.51.3",         # LLM 追踪
    "langsmith~=0.1.77",        # LangSmith 追踪
] 
